--- a/Web Application Development/Web Application Development.csproj
+++ b/Web Application Development/Web Application Development.csproj
@@ -64,6 +64,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="js\bootstrap.js" />
     <Content Include="js\bootstrap.min.js" />
+    <Content Include="js\jquery-2.1.1.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
