--- a/WebApplicationDevelopment/bin/WebApplicationDevelopment.dll.config
+++ b/WebApplicationDevelopment/bin/WebApplicationDevelopment.dll.config
@@ -11,6 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-WebApplicationDevelopment-20140530033543.mdf;Initial Catalog=aspnet-WebApplicationDevelopment-20140530033543;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="StocksDBContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Stocks.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
