Updated CSS / About Page   * Created new CSS file so we can use template code   * Old CSS files are saves as OriginalBootstrap   * Added more div for each team member   * Tried to get images to work, but must not be using the right filepath?

--- a/WebApplicationDevelopment/WebApplicationDevelopment.csproj
+++ b/WebApplicationDevelopment/WebApplicationDevelopment.csproj
@@ -174,8 +174,8 @@
     <Content Include="App_Data\Stocks_log.ldf">
       <DependentUpon>Stocks.mdf</DependentUpon>
     </Content>
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\originalbootstrap.css" />
+    <Content Include="Content\originalbootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
