--- a/WebApplicationDevelopment/WebApplicationDevelopment.csproj
+++ b/WebApplicationDevelopment/WebApplicationDevelopment.csproj
@@ -194,6 +194,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\stock.lookup.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="VisualStudio.gitignore" />
     <Content Include="Web.config" />
