--- a/WebApplicationDevelopment/WebApplicationDevelopment.csproj
+++ b/WebApplicationDevelopment/WebApplicationDevelopment.csproj
@@ -180,6 +180,11 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\BThompson.jpg" />
+    <Content Include="Images\BullMarket.jpg" />
+    <Content Include="Images\DCole.jpg" />
+    <Content Include="Images\JGreen.jpg" />
+    <Content Include="Images\TMerrell.jpg" />
     <Content Include="Scripts\AccountTabs.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
