--- a/WebApplicationDevelopment/packages.config
+++ b/WebApplicationDevelopment/packages.config
@@ -12,6 +12,8 @@
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
