Index Page: * Added New Bull Image that looks better with our white page background. * Image is dynamic within the jumbotron, as the jumbotron adjusts in size, so does the image.

--- a/WebApplicationDevelopment/WebApplicationDevelopment.csproj
+++ b/WebApplicationDevelopment/WebApplicationDevelopment.csproj
@@ -206,7 +206,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Images\BThompson.jpg" />
-    <Content Include="Images\BullMarket.jpg" />
+    <Content Include="Images\BullMarket2.jpg" />
     <Content Include="Images\DCole.jpg" />
     <Content Include="Images\JGreen.jpg" />
     <Content Include="Images\StockTicker.jpg" />
