--- a/WebApplicationDevelopment/WebApplicationDevelopment.csproj
+++ b/WebApplicationDevelopment/WebApplicationDevelopment.csproj
@@ -190,6 +190,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201406151218569_InitialCreate.cs" />
+    <Compile Include="Migrations\201406151218569_InitialCreate.Designer.cs">
+      <DependentUpon>201406151218569_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201408021844509_UserName.cs" />
+    <Compile Include="Migrations\201408021844509_UserName.Designer.cs">
+      <DependentUpon>201408021844509_UserName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\PortfolioModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -284,6 +293,14 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201406151218569_InitialCreate.resx">
+      <DependentUpon>201406151218569_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201408021844509_UserName.resx">
+      <DependentUpon>201408021844509_UserName.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
